--- a/bubbles-interface/package.json
+++ b/bubbles-interface/package.json
@@ -9,13 +9,24 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@dynamic-labs/bitcoin": "^4.32.1",
+    "@dynamic-labs/ethereum": "^4.32.1",
+    "@dynamic-labs/sdk-react-core": "^4.32.1",
+    "@dynamic-labs/solana": "^4.32.1",
+    "@dynamic-labs/sui": "^4.32.1",
+    "@dynamic-labs/wagmi-connector": "^4.32.1",
+    "@tanstack/react-query": "^5.90.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.544.0",
     "next": "15.5.4",
+    "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.6.14",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "viem": "^2.37.8",
+    "wagmi": "^2.17.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
