--- a/bubbles-interface/package.json
+++ b/bubbles-interface/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@arx-research/libhalo": "^1.15.0",
     "@dynamic-labs/bitcoin": "^4.32.1",
     "@dynamic-labs/ethereum": "^4.32.1",
     "@dynamic-labs/sdk-react-core": "^4.32.1",
