--- a/server/package.json
+++ b/server/package.json
@@ -7,8 +7,12 @@
     "start": "node dist/index.js"
   },
   "dependencies": {
+    "@1inch/cross-chain-sdk": "^1.0.2",
     "@hono/node-server": "^1.19.4",
-    "hono": "^4.9.8"
+    "dotenv": "^17.2.2",
+    "ethers": "^6.15.0",
+    "hono": "^4.9.8",
+    "web3": "^4.16.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.17",
