--- a/bubbles-interface/package.json
+++ b/bubbles-interface/package.json
@@ -33,10 +33,12 @@
     "lucide-react": "^0.544.0",
     "motion": "^12.23.22",
     "next": "15.5.4",
+    "next-themes": "^0.4.6",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "viem": "^2.37.8",
     "wagmi": "^2.17.5"
