--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "@hono/node-server": "^1.19.4",
-    "hono": "^4.9.8"
+    "hono": "^4.9.8",
+    "viem": "^2.37.8"
   },
   "devDependencies": {
     "@types/node": "^20.11.17",
