--- a/bubbles-interface/package.json
+++ b/bubbles-interface/package.json
@@ -25,6 +25,12 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@tanstack/react-query": "^5.90.2",
     "@types/canvas-confetti": "^1.9.0",
+    "@zerodev/ecdsa-validator": "^5.4.9",
+    "@zerodev/intent": "^0.0.27",
+    "@zerodev/multi-chain-ecdsa-validator": "^5.4.5",
+    "@zerodev/passkey-validator": "^5.5.5",
+    "@zerodev/permissions": "^5.5.8",
+    "@zerodev/sdk": "^5.4.36",
     "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
