--- a/bubbles-interface/package.json
+++ b/bubbles-interface/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tabs": "^1.1.13",
     "@tanstack/react-query": "^5.90.2",
     "@types/canvas-confetti": "^1.9.0",
     "@zerodev/ecdsa-validator": "^5.4.9",
@@ -47,7 +48,8 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "viem": "^2.37.8",
-    "wagmi": "^2.17.5"
+    "wagmi": "^2.17.5",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
