--- a/bubbles-interface/package.json
+++ b/bubbles-interface/package.json
@@ -10,13 +10,6 @@
   },
   "dependencies": {
     "@arx-research/libhalo": "^1.15.0",
-    "@dynamic-labs/bitcoin": "^4.32.1",
-    "@dynamic-labs/ethereum": "^4.32.1",
-    "@dynamic-labs/sdk-react-core": "^4.32.1",
-    "@dynamic-labs/solana": "^4.32.1",
-    "@dynamic-labs/sui": "^4.32.1",
-    "@dynamic-labs/types": "^4.33.0",
-    "@dynamic-labs/wagmi-connector": "^4.32.1",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.7",
@@ -47,6 +40,7 @@
     "react-dom": "19.1.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
+    "usehooks-ts": "^3.1.1",
     "viem": "^2.37.8",
     "wagmi": "^2.17.5",
     "zustand": "^5.0.8"
